# delpro-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pgadmin-servers.json  pgpass  pyproject.toml  readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-prod.yml
hooks/: pre-push
requests/: chat_requests.rest  document_requests.rest  image_requests.rest  test.rest
requests/test_files/: brisa.txt  free.txt  olympic.txt
src/delpro_backend/: __init__.py  main.py
src/delpro_backend/assistant/: agent_tools.py  assistant_service.py  prompt.yml  prompt_loader.py
src/delpro_backend/db/: chat_history_service.py  db_service.py  document_service.py  exceptions.py  models.py  session.py  vector_service.py
src/delpro_backend/services/: broker_service.py  document_service.py  image_service.py  media_service.py  rag_service.py  vector_service.py  webhook_preprocessing_service.py  whatsapp_api.py  whatsapp_service.py
tests/: __init__.py  keys_test.py  test_main.py
tests/assistant/: test_agent_tools.py  test_assistant_service.py  test_prompt_loader.py
tests/db/: test_chat_history_service.py  test_db_service.py  test_document_service.py  test_exceptions.py  test_vector_service.py
tests/models/: test_api_models.py
tests/routes/: test_brokers_router.py  test_chat_router.py  test_documents_router.py  test_images_router.py  test_media_router.py  test_prompt_router.py  test_whatsapp_router.py
tests/services/: test_broker_service.py  test_document_service.py  test_image_service.py  test_media_service.py  test_rag_service.py  test_webhook_preprocessing_service.py  test_whatsapp_api.py  test_whatsapp_service.py
tests/utils/: test_dev_state.py  test_embeddings_builder.py  test_handle_errors.py  test_llm_builder.py  test_whatsapp_utils.py
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json
ui/src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
(+51 files in other folders)
