[project]
name = "delpro-backend"
version = "0.1.0"
description = "Delpro ChatBot Backend"
author=[{name= "Nicolas Docolas"}]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","D"]
ignore = ["E203","D104"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D100","D104","F401"]
"test_*.py" = ["D100","D101","D102","F401"]
"tests/**/*.py" = ["D100","D101","D102","F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "ruff>=0.14.13",
]
